fixed spacing issues on index.html

--- a/Style/style.css
+++ b/Style/style.css
@@ -4,3 +4,6 @@
 .container {
   display: flex;
 }
+.row {
+  height: 90vh;
+}
